Bug 84483 - PRINTING: Print dialogue called from print preview causes writer to crash
Summary: PRINTING: Print dialogue called from print preview causes writer to crash
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: highest major
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:5.1.0 target:5.0.0.0.beta2...
Keywords: needUITest
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-09-29 17:40 UTC by peterpan
Modified: 2018-02-01 17:57 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample document made from default mediawiki template. (14.44 KB, application/vnd.oasis.opendocument.text)
2014-09-29 17:40 UTC, peterpan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description peterpan 2014-09-29 17:40:40 UTC
Created attachment 107074 [details]
sample document made from default mediawiki template.

Problem description: writer crashes when print dialogue is called from within print preview. 

Steps to reproduce:
1. create random document with revisions/track changes and notes/comments
2. go to print preview
3. push print
4. select to put comments on side of printed page.

Printing with comments at side of document works fine when print preview is not used.

Current behavior: writer crashes

Expected behavior: writer will not crash

              
Operating System: Windows 7
Version: 4.3.0.4 release
Comment 1 Jacques Guilleron 2014-09-29 19:50:32 UTC
Hi peterpan,

I don't rerpoduce with 
LO 4.3.2.1 Build ID: f9b3ad49d92181b0a1fe7e76f785a2c2cd0847d3
LO 4.3.2.2 Build ID: edfb5295ba211bd31ad47d0bad0118690f76407d
LO 4.4.0.0.alpha0+ Build ID: 5aeb852efcabdd51545d5d41c92f4bf3cef1d663
TinderBox: Win-x86@39, Branch:master, Time: 2014-09-08_07:01:57
Under Windows 7 Home Premium.
Can you try a recent release?

Thank you,

Jacques
Comment 2 peterpan 2015-02-16 13:38:46 UTC
Hello Jacques, 

I probably missed Your reaction, so I got back now. Sorry for the delay. 

I have just tried on Version: 4.4.0.3 build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7 with W7_64
Locale: cs_CZ and it still crashes. 


Steps to reproduce:
1. create random document with revisions/track changes and notes/comments
2. go to print preview
3. push print
4. at the print dialogue select to put comments on side of printed page.
5. LO crashes when that selection is made.

I checked now on other W7_64 machine and W8.1 one and it crashes on all of them. I used the attached document. 

peterpan
Comment 3 Joel Madero 2015-02-19 04:19:35 UTC
Ubuntu 14.10 x64
LibreOffice 4.4.0.3 release

Confirmed:
New
Major - crash
High

Note: This is not a regression - it seems to have never worked right since it was implemented.
Comment 4 Commit Notification 2015-06-04 13:03:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eea5ac7910d61796d77fe2cc03681dd24bb7dd95

Resolves: tdf#84483 postit layout not available in print preview mode

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-04 13:07:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84c9d54eb3c007066908794a1443dca6670a3922&h=libreoffice-5-0

Resolves: tdf#84483 postit layout not available in print preview mode

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2015-06-04 19:34:28 UTC
That makes it not crash anyway. Catch is that in that print preview mode printing comments in the margin can't be done with the print-preview backing shell.
Comment 7 Commit Notification 2015-06-04 19:35:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01f77389b473a37a7b8e0e46a1e49a56dac478c3&h=libreoffice-4-4

Resolves: tdf#84483 postit layout not available in print preview mode

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2015-12-05 14:44:43 UTC
cleanup keywords