Resolves: tdf#84483 postit layout not available in print preview mode

for the moment don't crash anyway, maybe we can rearrange matters
to make this possible.

Change-Id: I2dc9831e5b026004b2f7603e618330154dbd6d1b
(cherry picked from commit eea5ac7910d61796d77fe2cc03681dd24bb7dd95)
(cherry picked from commit 84c9d54eb3c007066908794a1443dca6670a3922)